<resources>
    <string name="app_name">FlyAway</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cancel_button">Cancel</string>
    <string name="flight_reference_number">#ARDFTY</string>
    <string name="flight_date">Date: 13/02/2019 </string>
    <string name="flight_time">Time: 14:50 </string>
    <string name="flight_from">Johannesburg</string>
    <string name="flight_to">Durban</string>
    <string name="add_button">Add</string>
    <string name="splash_title">Fly Away</string>
    <string name="splash_subtitle">Never miss a flight again</string>
    <string name="select_date_place_holder">Select a departure date</string>
    <string name="select_time_place_holder">Select a departure time</string>

</resources>
